--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        'rin-primary': '#ABEF5F'
                     },
                     fontFamily: {
                         manrope: ["Manrope", "sans-serif"],
@@ -37,10 +38,46 @@
     <!-- Script tag ends here -->
     <title>Assignment-03: Rinterio</title>
 </head>
-<body class="font-manrope">
+<body class="font-manrope container mx-auto">
 <!-- Header section starts here -->
-    <header>
-
+    <header class="bg-gradient-to-t from-[#ffffff] to-[#ebebeb]">
+        <!-- Navbar starts here -->
+         <nav>
+            <div class="navbar">
+                <div class="navbar-start">
+                    <a href="#" class="flex items-center gap-2">
+                        <i class="fa-solid fa-arrow-right-long bg-rin-primary p-3 -rotate-45 rounded-full"></i>
+                        <span class="text-3xl font-extrabold text-[#212121]">Rinterio</span>
+                    </a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="text-[#494949] font-extrabold">Home</a></li>
+                        <li><a class="text-[#737373]">Services</a></li>
+                        <li><a class="text-[#737373]">Portfolio</a></li>
+                        <li><a class="text-[#737373]">Blogs</a></li>
+                        <li><a class="text-[#737373]">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end gap-4">
+                    <a href="#"><i class="fa-solid fa-magnifying-glass bg-white border border-[#E9E9E9] p-3 rounded-full hidden md:flex"></i></a>
+                    <a href="#"><i class="fa-solid fa-cart-shopping bg-white border border-[#E9E9E9] p-3 rounded-full hidden md:flex"></i></a>
+                    <a href="#" class="bg-rin-primary md:w-fit rounded-[32px] font-extrabold px-4 hidden md:block">Book Consult<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a>
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <i class="fa-solid fa-bars text-2xl"></i>
+                        </div>
+                        <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow right-0">
+                            <li><a class="text-[#494949] font-extrabold">Home</a></li>
+                            <li><a class="text-[#737373]">Services</a></li>
+                            <li><a class="text-[#737373]">Portfolio</a></li>
+                            <li><a class="text-[#737373]">Blogs</a></li>
+                            <li><a class="text-[#737373]">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+         </nav>
     </header>
 <!-- Header section ends here -->
 
