--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- Header section starts here -->
     <header class="bg-gradient-to-t from-[#ffffff] to-[#ebebeb]">
         <!-- Navbar starts here -->
-         <nav>
+        <nav class="py-6">
             <div class="navbar">
                 <div class="navbar-start">
                     <a href="#" class="flex items-center gap-2">
@@ -59,13 +59,15 @@
                         <li><a class="text-[#737373]">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end gap-4">
+                <div class="navbar-end gap-2">
                     <a href="#"><i class="fa-solid fa-magnifying-glass bg-white border border-[#E9E9E9] p-3 rounded-full hidden md:flex"></i></a>
                     <a href="#"><i class="fa-solid fa-cart-shopping bg-white border border-[#E9E9E9] p-3 rounded-full hidden md:flex"></i></a>
-                    <a href="#" class="bg-rin-primary md:w-fit rounded-[32px] font-extrabold px-4 hidden md:block">Book Consult<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a>
+                    <div>
+                        <a href="#" class="bg-rin-primary rounded-[32px] font-extrabold px-4 hidden md:block ">Book Consult<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
                     <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                            <i class="fa-solid fa-bars text-2xl"></i>
+                        <div tabindex="0" role="button" class=" lg:hidden">
+                            <i class="fa-solid fa-bars px-4 py-3 text-xl bg-white border border-[#E9E9E9] rounded-full"></i>
                         </div>
                         <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow right-0">
                             <li><a class="text-[#494949] font-extrabold">Home</a></li>
@@ -77,7 +79,20 @@
                     </div>
                 </div>
             </div>
-         </nav>
+        </nav>
+        <!-- Hero section starts here -->
+        <div>
+            <div>
+                <img src="assets/banner.png" class="mx-auto" alt="">
+            </div>
+            <div class="hero-content text-center mx-auto">
+                <div class="md:w-4/5 mx-auto">
+                    <h1 class="text-4xl md:text-5xl lg:6xl font-extrabold mb-4 text-[#212121]">A barn house of this design has a striking appearance</h1>
+                    <p class="py-6 mb-6 text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    <button class=" bg-[rgba(171,239,95,0.5)] text-lg font-extrabold rounded-[32px] px-6 border border-[#ABEF5F] py-2 w-full md:w-1/2 lg:w-1/4">View Details <i class="fa-solid fa-arrow-right-long bg-rin-primary p-3 ml-2 -rotate-45 rounded-full"></i></button>
+                </div>
+            </div>
+        </div>
     </header>
 <!-- Header section ends here -->
 
