--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 <!-- Main section starts here -->
     <main>
         <!-- About section starts here -->
-         <section class="mt-16 md:24 lg:mt-32 bg-[#F4F4F4] pt-6">
+         <section class="mt-16 md:mt-24 lg:mt-32 bg-[#F4F4F4] pt-6">
             <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top pt-16 pb-24 px-3 md:px-6 ">
                 <div class="flex flex-col-reverse lg:flex-row-reverse items-center gap-6 md:gap-12 lg:gap-24">
-                    <img src="assets/rectangle.png" class="w-full md:w-full h-80 md:h-[450px] lg:h-full"/>
+                    <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
                     <div>
                         <div class="flex flex-col items-center lg:block">
                             <button class="bg-white px-6 py-3 mb-8 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>About Us</button>
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                         <div class="space-y-6 md:space-y-0 lg:space-y-3 md:flex md:gap-6 lg:flex-col">
-                            <div class="flex md:items-center gap-6 p-6 bg-white rounded-2xl">
+                            <div class="flex lg:items-center gap-6 p-6 bg-white rounded-2xl">
                                 <div>
                                     <img src="assets/commercial.png" alt="">
                                 </div>
@@ -124,7 +124,7 @@
                                     <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
                                 </div>
                             </div>
-                            <div class="flex md:items-center gap-6 p-6 bg-white rounded-2xl">
+                            <div class="flex lg:items-center gap-6 p-6 bg-white rounded-2xl">
                                 <div>
                                     <img src="assets/residential.png" alt="">
                                 </div>
@@ -140,6 +140,54 @@
             </div>
          </section>
         <!-- About section ends here -->
+
+        <!-- Work process section starts here -->
+         <section class="pt-12 md:pt-20 lg:pt-24 bg-[#F4F4F4] px-3 md:px-6">
+            <div class="text-center w-full md:w-1/2 mx-auto">
+                <button class="bg-white px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>How we works</button>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Our Works Process</h2>
+                <p class="py-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <div class="card bg-[#E7C1D3] p-6 space-y-3">
+                    <div>
+                        <img src="assets/concept.png" alt="concept" />
+                    </div>
+                    <div>
+                    <h2 class="card-title mb-2 font-extrabold">Concept</h2>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="card bg-[#EFDA6E] p-6 space-y-3">
+                    <div>
+                        <img src="assets/flow-chart.png" alt="concept" />
+                    </div>
+                    <div>
+                    <h2 class="card-title mb-2 font-extrabold">Design Process</h2>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="card bg-[#A4DAC3] p-6 space-y-3">
+                    <div>
+                        <img src="assets/vision.png" alt="concept" />
+                    </div>
+                    <div>
+                    <h2 class="card-title mb-2 font-extrabold">Supervision</h2>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <div class="card bg-[#77AAEA] p-6 space-y-3">
+                    <div>
+                        <img src="assets/budget-planning.png" alt="concept" />
+                    </div>
+                    <div>
+                    <h2 class="card-title mb-2 font-extrabold">Budget Planning</h2>
+                    <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+        <!-- Work process section ends here -->
     </main>
 <!-- Main section ends here -->
 
