--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     },
                     backgroundImage: {
                         'about-bg': "url('assets/vector.png')",
+                        'contact-bg': "url('assets/bg.jpg')",
                     }
                 }
             }
@@ -103,7 +104,7 @@
     <main>
         <!-- About section starts here -->
          <section class="mt-16 md:mt-24 lg:mt-32 bg-[#F4F4F4] pt-6">
-            <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top pt-16 pb-24 px-3 md:px-6 ">
+            <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-6 ">
                 <div class="flex flex-col-reverse lg:flex-row-reverse items-center gap-6 md:gap-12 lg:gap-24">
                     <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
                     <div>
@@ -143,7 +144,7 @@
 
         <!-- Work process section starts here -->
          <section class="pt-12 md:pt-20 lg:pt-24 bg-[#F4F4F4] px-3 md:px-6">
-            <div class="text-center w-full md:w-1/2 mx-auto">
+            <div class="text-center w-full md:w-5/6 lg:w-1/2 mx-auto">
                 <button class="bg-white px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>How we works</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Our Works Process</h2>
                 <p class="py-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -188,6 +189,30 @@
             </div>
          </section>
         <!-- Work process section ends here -->
+
+        <!-- Contact section starts here -->
+         <section class="mt-16 md:mt-24 lg:mt-32 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
+            <div class="text-center w-full md:w-4/5 lg:w-1/2 mx-auto">
+                <button class="bg-[#ABEF5F33] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Let’s Discuss Next Project</h2>
+                <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="w-full md:w-11/12 mx-auto flex flex-col items-center space-y-6 mt-12">
+                <div class="w-11/12 md:flex md:gap-6">
+                    <input type="text" class="w-full px-6 py-4 mb-6 md:mb-0 border-none outline-none rounded-[64px]" placeholder="First Name*" />
+                    <input type="text" class="w-full px-6 py-4 border-none outline-none rounded-[64px]" placeholder="Last Name*" />
+                </div>
+                <div class="w-11/12 md:flex md:gap-6">
+                    <input type="number" class="w-full px-6 py-4 mb-6 md:mb-0 border-none outline-none rounded-[64px]" placeholder="Phone Number*" />
+                    <input type="email" class="w-full px-6 py-4 border-none outline-none rounded-[64px]" placeholder="Email Number*" />
+                </div>
+                <div class="w-11/12">
+                    <textarea class="textarea w-full h-40 text-base px-6 py-4 border-none outline-none focus:outline-none rounded-[32px]" placeholder="Write Your Message Here"></textarea>
+                </div>
+                <a href="#" class="bg-rin-primary w-11/12 text-center rounded-[32px] font-extrabold px-4">Send Mail<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a> 
+            </div>
+         </section>
+        <!-- Contact section ends here -->
     </main>
 <!-- Main section ends here -->
 
