Added footer section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- Header section starts here -->
     <header class="bg-gradient-to-t from-[#ffffff] to-[#ebebeb]">
         <!-- Navbar starts here -->
-        <nav class="px-3 md:px-6">
+        <nav class="px-3 pt-5 md:px-6">
             <div class="navbar">
                 <div class="navbar-start">
                     <a href="#" class="flex items-center gap-2">
@@ -85,7 +85,7 @@
             </div>
         </nav>
         <!-- Hero section starts here -->
-        <div class="px-3 md:px-6">
+        <div class="px-3 md:px-8">
             <div>
                 <img src="assets/banner.png" class="mx-auto" alt="">
             </div>
@@ -93,7 +93,7 @@
                 <div class="md:w-4/5 mx-auto">
                     <h1 class="text-4xl md:text-5xl lg:6xl font-extrabold mb-4 text-[#212121]">A barn house of this design has a striking appearance</h1>
                     <p class="py-6 mb-6 text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-                    <button class=" bg-[rgba(171,239,95,0.5)] text-lg font-extrabold rounded-[32px] px-6 border border-[#ABEF5F] py-2 w-full md:w-1/2 lg:w-1/4">View Details <i class="fa-solid fa-arrow-right-long bg-rin-primary p-3 ml-2 -rotate-45 rounded-full"></i></button>
+                    <button class=" bg-[#abef5f80] font-extrabold rounded-[32px] px-4 border border-[#ABEF5F] py-2 w-full md:w-fit lg:w-fit">View Details <i class="fa-solid fa-arrow-right-long bg-rin-primary p-3 ml-2 -rotate-45 rounded-full"></i></button>
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
     <main>
         <!-- About section starts here -->
          <section class="mt-16 md:mt-24 lg:mt-32 bg-[#F4F4F4] pt-6">
-            <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-6 ">
+            <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-8 ">
                 <div class="flex flex-col-reverse lg:flex-row-reverse items-center gap-6 md:gap-12 lg:gap-24">
                     <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
                     <div>
@@ -143,7 +143,7 @@
         <!-- About section ends here -->
 
         <!-- Work process section starts here -->
-         <section class="pt-12 md:pt-20 lg:pt-24 bg-[#F4F4F4] px-3 md:px-6">
+         <section class="pt-12 md:pt-20 lg:pt-24 bg-[#F4F4F4] px-3 md:px-8">
             <div class="text-center w-full md:w-5/6 lg:w-1/2 mx-auto">
                 <button class="bg-white px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>How we works</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Our Works Process</h2>
@@ -193,7 +193,7 @@
         <!-- Contact section starts here -->
          <section class="mt-16 md:mt-24 lg:mt-32 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
             <div class="text-center w-full md:w-4/5 lg:w-1/2 mx-auto">
-                <button class="bg-[#ABEF5F33] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
+                <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Let’s Discuss Next Project</h2>
                 <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
@@ -217,8 +217,22 @@
 <!-- Main section ends here -->
 
 <!-- Footer section starts here -->
-    <footer>
-
+    <footer class="footer footer-center bg-[#1C1C1C] py-24">
+        <aside class="w-4/5">
+            <a href="#" class="flex items-center gap-2 mb-4">
+                <i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#1C1C1C] p-3 -rotate-45 rounded-full"></i>
+                <span class="text-3xl font-extrabold text-[#E9E9E9]">Rinterio</span>
+            </a>
+            <p class="lg:w-3/5 text-[#737373] mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+           <ul class="flex flex-col md:flex-row items-center gap-6 md:gap-20 lg:gap-24 text-white mb-8">
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><a href="">Contact Us</a></li>
+           </ul>
+           <a href="#" class="bg-rin-primary w-full md:w-fit rounded-[32px] font-extrabold px-4">Book Consult<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a> 
+        </aside>
     </footer>
 <!-- Footer section ends here -->
 </body>
