--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!-- Main section starts here -->
     <main>
         <!-- About section starts here -->
-         <section class="mt-16 md:mt-24 lg:mt-32 bg-[#F4F4F4] pt-6">
+        <section class="mt-6 md:mt-14 lg:mt-20 bg-[#F4F4F4] pt-6">
             <div class="bg-[#F4F4F4] bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-8 ">
                 <div class="flex flex-col-reverse lg:flex-row-reverse items-center gap-6 md:gap-12 lg:gap-24">
                     <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
@@ -139,12 +139,12 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- About section ends here -->
 
         <!-- Work process section starts here -->
-         <section class="pt-12 md:pt-20 lg:pt-24 bg-[#F4F4F4] px-3 md:px-8">
-            <div class="text-center w-full md:w-5/6 lg:w-1/2 mx-auto">
+        <section class="py-12 md:py-20 lg:py-24 bg-[#F4F4F4] px-3 md:px-8">
+            <div class="text-center w-full md:w-5/6 lg:w-8/12 mx-auto">
                 <button class="bg-white px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>How we works</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Our Works Process</h2>
                 <p class="py-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -187,12 +187,64 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- Work process section ends here -->
 
+        <!-- Portfolio section starts here -->
+        <section class="mt-12 md:mt-20 lg:mt-24 px-3 md:px-8">
+            <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
+                <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Explore our Latest works</button>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Our Latest Portfolio</h2>
+                <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="mt-12 grid grid-cols-1 md:grid-cols-8 gap-6">
+                <div class="lg:h-[250px] lg:card-side md:col-span-8 lg:col-span-5 border border-[#E9E9E9] p-4 flex flex-col md:flex-row items-center gap-6 rounded-2xl order-1 md:order-1">
+                    <div class="w-full">
+                        <img src="assets/img1.png" class="lg:h-[214px] w-full" alt="Album" />
+                    </div>
+                    <div class="w-full">
+                        <h2 class="text-2xl text-[#494949] font-extrabold mb-5">Commercial</h2>
+                        <p class="font-medium text-[#737373] mb-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#212121] p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
+                </div>
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-3 border border-[#E9E9E9] p-4 md:flex items-center gap-6 rounded-2xl order-2 md:order-2">
+                    <div class="w-full">
+                        <img src="assets/img2.png" class="w-full h-[214px]" alt="Album" />
+                    </div>
+                </div>
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-[#E9E9E9] p-4 md:flex items-center gap-6 rounded-2xl order-5 md:order-5">
+                    <div class="w-full">
+                        <img src="assets/img3.png" class="h-[214px] w-full" alt="Album" />
+                    </div>
+                </div>
+                <div class="lg:h-[250px] lg:card-side md:col-span-8 lg:col-span-4 border border-[#E9E9E9] p-4 flex flex-col md:flex-row items-center gap-6 rounded-2xl order-4 md:order-4">
+                    <div class="w-full">
+                        <img src="assets/img4.png" class="lg:h-[214px] w-full" alt="Album" />
+                    </div>
+                    <div class="w-full">
+                        <h2 class="text-2xl text-[#494949] font-extrabold mb-5">Commercial</h2>
+                        <p class="font-medium text-[#737373] mb-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood</p>
+                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#212121] p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
+                </div>
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-[#E9E9E9] p-4 lg:flex items-center gap-6 rounded-2xl order-3 md:order-3">
+                    <div class="w-full">
+                        <img src="assets/img5.png" class="h-[214px] w-full" alt="Album"/>
+                    </div>
+                </div>
+                <div class="h-[250px] lg:card-side  md:col-span-4 lg:col-span-2 border border-[#E9E9E9] p-4 items-center gap-6 rounded-2xl order-6 md:order-6  lg:hidden">
+                    <div class="w-full">
+                        <img src="assets/img5.png" class="h-[214px] w-full" alt="Album"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio section ends here -->
+
         <!-- Contact section starts here -->
-         <section class="mt-16 md:mt-24 lg:mt-32 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
-            <div class="text-center w-full md:w-4/5 lg:w-1/2 mx-auto">
+        <section class="mt-12 md:mt-20 lg:mt-24 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
+            <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
                 <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Let’s Discuss Next Project</h2>
                 <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
@@ -211,7 +263,7 @@
                 </div>
                 <a href="#" class="bg-rin-primary w-11/12 text-center rounded-[32px] font-extrabold px-4">Send Mail<i class="fa-solid fa-arrow-right-long bg-[#1C1C1C] text-white p-3 my-2 ml-2 -rotate-45 rounded-full"></i></a> 
             </div>
-         </section>
+        </section>
         <!-- Contact section ends here -->
     </main>
 <!-- Main section ends here -->
