Added extra about section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Extra about section starts here -->
+             <div class="mt-8 bg-white mx-3 md:mx-8 rounded-xl p-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 text-center">
+                <div>
+                    <i class="fa-solid fa-message text-3xl mb-3 text-[#494949]"></i>
+                    <h2 class="text-4xl font-extrabold text-[#494949] mb-2">235+</h2>
+                    <p class="font-medium text-[#737373]">Happy Client Review</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-building text-3xl mb-3 text-[#494949]"></i>
+                    <h2 class="text-4xl font-extrabold text-[#494949] mb-2">50+</h2>
+                    <p class="font-medium text-[#737373]">Work Departments</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-users text-3xl mb-3 text-[#494949]"></i>
+                    <h2 class="text-4xl font-extrabold text-[#494949] mb-2">30k+</h2>
+                    <p class="font-medium text-[#737373]">Our Happy Client</p>
+                </div>
+                <div>
+                    <i class="fa-solid fa-users-gear text-3xl mb-3 text-[#494949]"></i>
+                    <h2 class="text-4xl font-extrabold text-[#494949] mb-2">307+</h2>
+                    <p class="font-medium text-[#737373]">Staff Members</p>
+                </div>
+             </div>
+            <!-- Extra about section ends here -->
         </section>
         <!-- About section ends here -->
 
