Added news section with responsive design for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body class="font-manrope container mx-auto">
 <!-- Header section starts here -->
-    <header class="bg-gradient-to-t from-[#ffffff] to-[#ebebeb]">
+    <header class="bg-gradient-to-t from-[#ffffff] to-[#f0f0f0]">
         <!-- Navbar starts here -->
         <nav class="px-3 pt-5 md:px-6">
             <div class="navbar">
@@ -266,6 +266,78 @@
             </div>
         </section>
         <!-- Portfolio section ends here -->
+
+        <!-- News section starts here -->
+         <section class="mt-12 md:mt-20 lg:mt-24 py-12 md:py-20 lg:py-24 bg-[#F4F4F4] px-3 md:px-8">
+            <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
+                <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Rinterio News</button>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Read Our Articles and News</h2>
+                <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="mt-12 flex flex-col lg:flex-row gap-6">
+                <div class="card flex flex-col md:flex-row lg:flex-col items-center gap-2 md:gap-6 lg:gap-2 p-6 bg-white shadow-xl">
+                    <div class="h-[250px]">
+                        <img src="assets/article1.png" class="rounded-xl h-full" alt="" />
+                    </div>
+                    <div>
+                        <div class="flex items-center gap-5 mb-4">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-calendar-days text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-user text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="mb-4 text-[#494949] font-extrabold text-xl">How to choose the furniture right  of your home.</h2>
+                        <p class="mb-6 text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">Read More<i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#212121] p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
+                </div>
+                <div class="card flex flex-col md:flex-row lg:flex-col items-center gap-2 md:gap-6 lg:gap-2  p-6 bg-white shadow-xl">
+                    <div class="h-[250px]">
+                        <img src="assets/article2.png" class="rounded-xl h-full" alt="" />
+                    </div>
+                    <div>
+                        <div class="flex items-center gap-5 mb-4">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-calendar-days text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-user text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="mb-4 text-[#494949] font-extrabold text-xl">How to choose the furniture right  of your home.</h2>
+                        <p class="mb-6 text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">Read More<i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#212121] p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
+                </div>
+                <div class="card flex flex-col md:flex-row lg:flex-col items-center gap-2 md:gap-6 lg:gap-2 p-6 bg-white shadow-xl">
+                    <div class="h-[250px]">
+                        <img src="assets/article3.png" class="rounded-xl h-full" alt="" />
+                    </div>
+                    <div>
+                        <div class="flex items-center gap-5 mb-4">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-calendar-days text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-user text-[#494949]"></i>
+                                <p class="text-[#737373] font-medium">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="mb-4 text-[#494949] font-extrabold text-xl">How to choose the furniture right  of your home.</h2>
+                        <p class="mb-6 text-[#737373] font-medium">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">Read More<i class="fa-solid fa-arrow-right-long bg-rin-primary text-[#212121] p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                    </div>
+                </div>
+            </div>
+         </section>
+        <!-- News section ends here -->
 
         <!-- Contact section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
