--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <!-- Portfolio section ends here -->
 
         <!-- News section starts here -->
-         <section class="mt-12 md:mt-20 lg:mt-24 py-12 md:py-20 lg:py-24 bg-[#F4F4F4] px-3 md:px-8">
+        <section class="mt-12 md:mt-20 lg:mt-24 py-12 md:py-20 lg:py-24 bg-[#F4F4F4] px-3 md:px-8">
             <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
                 <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Rinterio News</button>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-3">Read Our Articles and News</h2>
@@ -336,8 +336,85 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
         <!-- News section ends here -->
+
+        <!-- Testimonials section starts here -->
+        <section class="mt-12 md:mt-20 lg:mt-24 px-3 md:px-8">
+            <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
+                <button class="bg-[#abef5f80] px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Testimonials</button>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-3">What Our Clients Say</h2>
+                <p class="p-3 mb-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="mt-12">
+                <div class="carousel carousel-vertical h-[500px] md:h-[450px] lg-[400px]  shadow-sm border rounded-box w-full">
+                    <div class="carousel-item h-full w-full flex  items-center">
+                        <div class="flex flex-col items-center w-full lg:w-4/5 mx-auto p-6 space-y-5">
+                            <div>
+                            <img src="assets/client1.png" class="w-1/5 rounded-full mx-auto" alt="">
+                            </div>
+                            <div class="rating space-x-1">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            </div>
+                            <div class="text-center">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloremque dolores cum error adipisci reprehenderit quae provident optio amet exercitationem explicabo dolor odit quibusdam maiores, enim aperiam a alias inventore nisi fugiat, quos possimus totam! Qui porro dolorem iusto facere accusantium beatae nobis, quasi aspernatur cum ullam quos mollitia totam?</p>
+                            </div>
+                            <div class="text-center">
+                                <h3 class="text-xl font-extrabold text-[#494949]">Ashiqur Rahman</h3>
+                                <h4 class="font-semibold text-[#737373]">Regular Client</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item h-full w-full flex  items-center">
+                        <div class="flex flex-col items-center w-4/5 mx-auto p-6 space-y-4">
+                            <div>
+                                <img src="assets/client2.png" class="w-1/5 rounded-full mx-auto" alt="">
+                            </div>
+                            <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            </div>
+                            <div class="text-center">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloremque dolores cum error adipisci reprehenderit quae provident optio amet exercitationem explicabo dolor odit quibusdam maiores, enim aperiam a alias inventore nisi fugiat, quos possimus totam! Qui porro dolorem iusto facere accusantium beatae nobis, quasi aspernatur cum ullam quos mollitia totam?</p>
+                            </div>
+                            <div class="text-center">
+                                <h3 class="text-xl font-extrabold text-[#494949]">Ashiqur Rahman</h3>
+                                <h4 class="font-semibold text-[#737373]">Regular Client</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item h-full w-full flex items-center">
+                        <div class="flex flex-col items-center w-4/5 mx-auto p-6 space-y-4">
+                            <div>
+                                <img src="assets/client3.png" class="w-1/5 rounded-full mx-auto" alt="">
+                            </div>
+                            <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            </div>
+                            <div class="text-center">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloremque dolores cum error adipisci reprehenderit quae provident optio amet exercitationem explicabo dolor odit quibusdam maiores, enim aperiam a alias inventore nisi fugiat, quos possimus totam! Qui porro dolorem iusto facere accusantium beatae nobis, quasi aspernatur cum ullam quos mollitia totam?</p>
+                            </div>
+                            <div class="text-center">
+                                <h3 class="text-xl font-extrabold text-[#494949]">Ashiqur Rahman</h3>
+                                <h4 class="font-semibold text-[#737373]">Regular Client</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials section ends here -->
 
         <!-- Contact section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
