Again edited portfolio buttons

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="w-full">
                         <h2 class="text-2xl text-dark-03 font-extrabold mb-5">Residential</h2>
                         <p class="font-medium text-dark-04 mb-6 text-justify">It refers to areas or properties designed for living, including houses and apartments, aimed at providing comfort and privacy.</p>
-                        <a href="#" class="bg-white inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-bg-01 text-dark-02 p-3 ml-2 -rotate-45 rounded-full"></i></a> 
+                        <a href="#" class="inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-bg-01 text-dark-02 p-3 ml-2 -rotate-45 rounded-full"></i></a> 
                     </div>
                 </div>
                 <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-3 md:order-3">
