First revision done for large devices

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     },
                     backgroundImage: {
                         'about-bg': "url('assets/vector.png')",
-                        'contact-bg': "url('assets/bg.jpg')",
+                        'contact-bg': "url('assets/bg.png')",
                     }
                 }
             }
@@ -100,7 +100,7 @@
                 <div class="md:w-4/5 mx-auto">
                     <h1 class="text-4xl md:text-5xl lg:6xl font-extrabold mb-4 text-dark-02 capitalize">A barn house of this design has a striking appearance</h1>
                     <p class="py-6 mb-6 text-dark-03">This design of a barn house has a striking appearance, blending rustic charm with modern elements. It has a traditional barn silhouette, featuring a steep roof and wide gables, complemented by large windows and natural materials like wood and stone.</p>
-                    <button class=" bg-bg-02 font-extrabold rounded-[32px] px-4 border border-bg-01 py-2 w-full md:w-fit lg:w-fit">View Details <i class="fa-solid fa-arrow-right-long bg-rin-primary p-3 ml-2 -rotate-45 rounded-full"></i></button>
+                    <button class=" bg-bg-02 font-extrabold rounded-[32px] px-4 border border-bg-01 py-2 w-full md:w-fit lg:w-fit">View Details <i class="fa-solid fa-arrow-right-long bg-bg-01 p-3 ml-2 -rotate-45 rounded-full"></i></button>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
                     <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
                     <div>
                         <div class="flex flex-col items-center lg:block">
-                            <button class="text-dark-03 bg-white px-6 py-3 mb-8 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>About Us</button>
+                            <button class="text-dark-03 bg-white px-6 py-3 mb-8 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>About Us</button>
                             <div class="text-center lg:text-left">
                                 <h2 class="text-dark-02 text-3xl md:text-4xl font-extrabold capitalize">We design thoughtful,<br> liveable spaces</h2>
                                 <p class="text-dark-03 font-medium py-6 mb-4 text-center lg:text-left w-11/12 lg:w-full mx-auto">Our approach emphasizes the importance of carefully considering every detail to ensure that spaces are beautiful but also comfortable and functional for daily living.</p>
@@ -177,7 +177,7 @@
         <!-- Work process section starts here -->
         <section class="py-12 md:py-20 lg:py-24 bg-sec-bg-01 px-3 md:px-8">
             <div class="text-center w-full md:w-5/6 lg:w-8/12 mx-auto">
-                <button class="dark-03 bg-white px-6 py-3 mb-4 rounded-[24px] font-bold capitalize"><i class="fa-solid fa-arrow-right-long dark-03 mr-3 rounded-full"></i>How we works</button>
+                <button class="dark-03 bg-white px-6 py-3 mb-4 rounded-[24px] font-bold capitalize cursor-auto"><i class="fa-solid fa-arrow-right-long dark-03 mr-3 rounded-full"></i>How we works</button>
                 <h2 class="dark-02 text-3xl md:text-4xl font-extrabold mb-3">Our Works Process</h2>
                 <p class="dark-03 font-medium py-3 mb-4">We ensure efficiency, transparency, and excellence by first understanding your needs and goals, and then meticulously planning the project scope and timelines.</p>
             </div>
@@ -225,7 +225,7 @@
         <!-- Portfolio section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 px-3 md:px-8">
             <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
-                <button class="text-dark-03 bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long text-dark-03 mr-3 rounded-full"></i>Explore our Latest works</button>
+                <button class="text-dark-03 bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long text-dark-03 mr-3 rounded-full"></i>Explore our Latest works</button>
                 <h2 class="text-dark-02 text-3xl md:text-4xl font-extrabold mb-3">Our Latest Portfolio</h2>
                 <p class="text-dark-03 font-medium p-3 mb-4">Our latest portfolio features a carefully curated selection of our most recent and innovative projects, demonstrating our unwavering commitment to excellence and creativity.</p>
             </div>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 md:flex items-center gap-6 rounded-2xl order-5 md:order-5">
                     <div class="w-full">
-                        <img src="assets/img3.png" class="h-[214px] w-full" alt="Album" />
+                        <img src="assets/img5.png" class="h-[214px] w-full" alt="Album" />
                     </div>
                 </div>
                 <div class="lg:h-[250px] lg:card-side md:col-span-8 lg:col-span-4 border border-light-01 p-4 flex flex-col md:flex-row items-center gap-6 rounded-2xl order-4 md:order-4">
@@ -262,7 +262,7 @@
                 </div>
                 <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-3 md:order-3">
                     <div class="w-full">
-                        <img src="assets/img5.png" class="h-[214px] w-full" alt="Album"/>
+                        <img src="assets/img3.png" class="h-[214px] w-full" alt="Album"/>
                     </div>
                 </div>
                 <div class="h-[250px] lg:card-side  md:col-span-4 lg:col-span-2 border border-light-01 p-4 items-center gap-6 rounded-2xl order-6 md:order-6  lg:hidden">
@@ -277,7 +277,7 @@
         <!-- News section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 py-12 md:py-20 lg:py-24 bg-sec-bg-01 px-3 md:px-8">
             <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
-                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Rinterio News</button>
+                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Rinterio News</button>
                 <h2 class="text-dark-02 text-3xl md:text-4xl font-extrabold mb-3">Read Our Articles and News</h2>
                 <p class="text-dark-03 font-medium p-3 mb-4">Explore our collection of articles and news for insightful information, updates, and in-depth analysis on a wide range of topics. Stay informed and engaged with the latest trends and stories.</p>
             </div>
@@ -349,7 +349,7 @@
         <!-- Testimonials section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 px-3 md:px-8">
             <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
-                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Testimonials</button>
+                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Testimonials</button>
                 <h2 class="text-dark-02 text-3xl md:text-4xl font-extrabold mb-3">What Our Clients Say</h2>
                 <p class="text-dark-03 font-medium p-3 mb-4">It is a testament to the trust and confidence our clients have in us, providing potential customers with an authentic view of the quality and reliability they can anticipate.</p>
             </div>
@@ -426,7 +426,7 @@
         <!-- Contact section starts here -->
         <section class="mt-12 md:mt-20 lg:mt-24 bg-contact-bg bg-no-repeat bg-cover border-8 border-white  py-12 md:py-24">
             <div class="text-center w-full md:w-4/5 lg:w-8/12 mx-auto">
-                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
+                <button class="bg-bg-02 px-6 py-3 mb-4 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>Let’s Connect</button>
                 <h2 class="text-dark-02 text-3xl md:text-4xl font-extrabold mb-3">Let’s Discuss Next Project</h2>
                 <p class="text-dark-03 font-medium p-3 mb-4">It emphasizes setting goals, defining key tasks, and assigning roles to ensure project success, aligning expectations and establishing a strong project foundation.</p>
             </div>
