First revision done for small devices

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <main>
         <!-- About section starts here -->
         <section class="mt-6 md:mt-14 lg:mt-20 bg-sec-bg-01 pt-6">
-            <div class="bg-sec-bg-01 bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-8 ">
+            <div class="bg-sec-bg-01 lg:bg-about-bg bg-no-repeat bg-auto bg-left-top py-6 md:py-16 px-3 md:px-8 ">
                 <div class="flex flex-col-reverse lg:flex-row-reverse items-center gap-6 md:gap-12 lg:gap-24">
-                    <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px]"/>
+                    <img src="assets/rectangle.png" class="w-full md:w-full lg:w-4/5 h-80 md:h-[450px] lg:h-[600px] rounded-2xl object-cover"/>
                     <div>
                         <div class="flex flex-col items-center lg:block">
                             <button class="text-dark-03 bg-white px-6 py-3 mb-8 rounded-[24px] font-bold cursor-auto"><i class="fa-solid fa-arrow-right-long mr-3 rounded-full"></i>About Us</button>
@@ -141,7 +141,6 @@
                                     <p class="text-dark-04 font-medium">Residential design aims to create functional and beautiful homes.</p>
                                 </div>
                             </div>
- 
                         </div>
                     </div>
                 </div>
@@ -245,7 +244,7 @@
                         <img src="assets/img2.png" class="w-full h-[214px]" alt="Album" />
                     </div>
                 </div>
-                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 md:flex items-center gap-6 rounded-2xl order-5 md:order-5">
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 md:flex items-center gap-6 rounded-2xl order-3 md:order-5">
                     <div class="w-full">
                         <img src="assets/img5.png" class="h-[214px] w-full" alt="Album" />
                     </div>
@@ -260,7 +259,7 @@
                         <a href="#" class="inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-bg-01 text-dark-02 p-3 ml-2 -rotate-45 rounded-full"></i></a> 
                     </div>
                 </div>
-                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-3 md:order-3">
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-5 md:order-3">
                     <div class="w-full">
                         <img src="assets/img3.png" class="h-[214px] w-full" alt="Album"/>
                     </div>
