--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="md:w-4/5 mx-auto">
                     <h1 class="text-4xl md:text-5xl lg:6xl font-extrabold mb-4 text-dark-02 capitalize">A barn house of this design has a striking appearance</h1>
                     <p class="py-6 mb-6 text-dark-03">This design of a barn house has a striking appearance, blending rustic charm with modern elements. It has a traditional barn silhouette, featuring a steep roof and wide gables, complemented by large windows and natural materials like wood and stone.</p>
-                    <button class=" bg-bg-02 font-extrabold rounded-[32px] px-4 border border-bg-01 py-2 w-full md:w-fit lg:w-fit">View Details <i class="fa-solid fa-arrow-right-long bg-bg-01 p-3 ml-2 -rotate-45 rounded-full"></i></button>
+                    <button class=" bg-[#ABEF5F80] font-extrabold rounded-[32px] px-4 border border-bg-01 py-2 w-full md:w-fit lg:w-fit">View Details <i class="fa-solid fa-arrow-right-long bg-bg-01 p-3 ml-2 -rotate-45 rounded-full"></i></button>
                 </div>
             </div>
         </div>
@@ -244,7 +244,7 @@
                         <img src="assets/img2.png" class="w-full h-[214px]" alt="Album" />
                     </div>
                 </div>
-                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 md:flex items-center gap-6 rounded-2xl order-3 md:order-5">
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 md:flex items-center gap-6 rounded-2xl order-3 md:order-3">
                     <div class="w-full">
                         <img src="assets/img5.png" class="h-[214px] w-full" alt="Album" />
                     </div>
@@ -259,7 +259,7 @@
                         <a href="#" class="inline-block rounded-[32px] font-extrabold">View Details<i class="fa-solid fa-arrow-right-long bg-bg-01 text-dark-02 p-3 ml-2 -rotate-45 rounded-full"></i></a> 
                     </div>
                 </div>
-                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-5 md:order-3">
+                <div class="h-[250px] lg:card-side md:col-span-4 lg:col-span-2 border border-light-01 p-4 lg:flex items-center gap-6 rounded-2xl order-5 md:order-5">
                     <div class="w-full">
                         <img src="assets/img3.png" class="h-[214px] w-full" alt="Album"/>
                     </div>
